Change route for task list from tasks to list Fix current progress rendering filled Fix DropDownInput.js text overflow Remove rendering of dates on VisualStreak.js Remove dropdown as completed container Make completed tasks go to the bottom

--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -34,3 +34,7 @@
 .streakContainer {
   display: inline-block;
 }
+
+.completed {
+  order: 1;
+}
